# Camera4Kivy

./: .gitignore  LICENSE  README.md  index.md  setup.cfg  setup.py
src/camera4kivy/: __init__.py  preview.py  preview_camerax.py  preview_common.py  preview_kivycamera.py
src/camera4kivy/based_on_kivy_core/: __init__.py
src/camera4kivy/based_on_kivy_core/camera/: MY_camera_opencv.py  __init__.py  camera_gi.py  camera_opencv.py  camera_picamera.py  camera_picamera2.py
src/camera4kivy/src/org/kivy/camerax/: CallbackWrapper.java  CameraX.java  ImageAnalysisAnalyzer.java  ImageProxyOps.java  ImageSavedCallback.java  KivySurfaceProvider.java  VideoSavedCallback.java
