[metadata]
name = camera4kivy
version = 0.2.0
author = Robert Flatt
description = Yet Another Camera for Kivy 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Android-for-Python/Camera4Kivy
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    gestures4kivy >= 0.1.1

[options.packages.find]
where = src
